crates/macros/tests/slang/fail/derive_gpu_type_missing_repr_c.rs
// Copyright 2026 The MuTate Contributors
// SPDX-License-Identifier: MIT OR Apache-2.0

use mutate_macros::GpuType;

#[derive(GpuType)]
struct WhoopsNoRepr {}

fn main() {}
